# Redditard

./: Cargo.toml  README.md  prompt.toml  subreddits.toml
src/: main.rs
