[package]
name = "redditard"
version = "0.1.0"
edition = "2024"

[dependencies]
thirtyfour = "0.35.0"
ollama-rs = "0.3.2"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
rand = "0.8"
futures = "0.3.31"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.42"
serde_json = "1.0.145"
parse = "0.1.2"
clap = { version = "4.5.53", features = ["derive"] }
